# OMCompiler-3rdParty

./: .gitignore  CMakeLists.txt  CMinpack.txt  CONTRIBUTING.md  Cdaskr.txt  FMIL.txt  Ipopt.txt  ModelicaExternalC.txt  README.md  check-depends.sh  cppzmq.txt  dgesv.txt  gc.txt  gopher-mcp-update.sh  libffi.txt  libzmq.txt  main.c  primme.txt  ryu.txt  simdjson.txt  tbb.txt
Cdaskr/: CMakeLists.txt
Cdaskr/examples/: Makefile  dheat.c  dkrdem.out.txt  dwebilu.out.txt  make_cddem  make_cdh  make_cdhilu  make_cdwilu
Cdaskr/fortran/examples/: makeddem  makedh  makedhilu  makedw  makedwilu
Cdaskr/solver/: ddaskr.c  ddaskr_types.h
SuiteSparse/: CMakeLists.txt  Helpers.cmake  UMFPACKConfig.cmake.in
SuiteSparse-5.8.1/: .gitignore  CMakeLists.txt  Helpers.cmake
SuiteSparse/AMD/: Makefile
SuiteSparse/UFconfig/: UFconfig.mk
SuiteSparse/UMFPACK/: Makefile
antlr/3.2/libantlr3c-3.2/: CMakeLists.txt  antlr3config.h.in  antlr3config.h.in.cmake  config.guess
egg_interface/: Cargo.toml  README.md
egg_interface/src/: debugging.rs  egraph.rs  lib.rs  rules.rs  runner.rs
egg_interface/tests/: api_test.rs
gopher-mcp/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FetchContent.cmake  Makefile  README.md  build-mingw.sh  build.sh  client_test.exp  dump-version.sh  test_mcp_client.py
gopher-mcp/bindings/: README.md
gopher-mcp/bindings/python/: mcp_python_example.py
gopher-mcp/bindings/typescript/: mcp_bindings.ts
gopher-mcp/cmake/: GopherMCPConfig.cmake.in  cmake_uninstall.cmake.in  gopher-mcp-c.pc.in  gopher-mcp-config.cmake.in  gopher-mcp.pc.in  gopher_mcp_c.pc.in  mingw-w64-toolchain.cmake
gopher-mcp/docker-mcp/: Dockerfile.linux-arm64  Dockerfile.linux-arm64-cross  Dockerfile.linux-x64  Dockerfile.windows-arm64-llvm  Dockerfile.windows-arm64-simple  Dockerfile.windows-x64  build-linux-arm64-docker.sh  build-linux-arm64.sh  build-linux-x64-docker.sh  build-linux-x64.sh  build-mac-arm64.sh  build-mac-x64.sh  build-windows-arm64.sh  build-windows-x64.sh
gopher-mcp/docker-mcp/windows-x64/: README.md  verify_mcp.c
gopher-mcp/docs/: CTAD_alternatives.md  MCP_serialization_coverage.md  event_loop_design.md  filter_chain.md  filter_usage_guide.md  logging_framework_design.md  mcp_protocol.md  network_layer.md  transport_layer.md
gopher-mcp/examples/: c_api_example.c  event_loop_example.cc  filter_configurations.cc  filter_example.cc  test_echo_integration.cc
gopher-mcp/examples/mcp/: CMakeLists.txt  README.md  full_config.json  mcp_config_example_server.cc  mcp_example_client.cc  mcp_example_server.cc  mcp_example_server_enhanced.cc  mcp_https_example.cc  minimal_config.json
gopher-mcp/examples/stdio_echo/: CMakeLists.txt  README.md  stdio_echo_client_advanced.cc  stdio_echo_client_basic.cc  stdio_echo_server_advanced.cc  stdio_echo_server_basic.cc  test_advanced_echo.sh
gopher-mcp/examples/tcp_echo/: CMakeLists.txt  tcp_echo_client_basic.cc  tcp_echo_server_basic.cc
gopher-mcp/examples/transport/: CMakeLists.txt  tcp_ssl_http_example.cc
gopher-mcp/include/mcp/: buffer.h  builders.h  io_result.h  mcp_application_base.h  mcp_connection_manager.h  types.h
gopher-mcp/scripts/: add-pr-number.sh
gopher-mcp/sdk/csharp/: .editorconfig  .gitignore  GopherMcp.sln  LICENSE  NuGet.config  README.md  build.sh  global.json
gopher-mcp/sdk/go/: .gitignore  Makefile  README.md
gopher-mcp/sdk/java/: .gitignore  Makefile  pom.xml
gopher-mcp/sdk/python/: NETWORK_LAYER_IMPLEMENTATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
gopher-mcp/sdk/ruby/: .gitignore  Gemfile  README.md  RUBY_SDK_DESIGN.md  Rakefile  mcp_filter_sdk.gemspec
gopher-mcp/sdk/rust/: .gitignore  Cargo.toml  README.md  TESTING_GUIDE.md  build.rs  run_examples.sh  test_all.sh
gopher-mcp/sdk/typescript/: .gitignore  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
gopher-mcp/shell/: debug_client.sh  test_advanced_echo.sh  test_basic_echo.sh  test_calculator.sh  test_complete_flow.sh  test_http_endpoints.sh  test_http_robust.sh  test_mcp_client.sh  test_mcp_http.sh  test_mcp_modes.sh  test_protocol_detection.sh  test_simple_client.sh  test_simple_mcp.sh  test_sse_init.sh
gopher-mcp/src/: mcp_connection_manager.cc
gopher-mcp/src/buffer/: buffer_impl.cc
gopher-mcp/tests/: CMakeLists.txt  test_application_base_refactored.cc  test_stdio_echo_client_advanced.cc  test_stdio_echo_client_basic.cc  test_stdio_echo_server_advanced.cc  test_stdio_echo_server_basic.cc  test_tcp_echo_client_basic.cc  test_tcp_echo_server_basic.cc
graphstream/: CMakeLists.txt  Makefile  README.txt
libffi/: CMakeLists.txt  configure.ac
libffi/.cmake/: configure_options.cmake  configure_platform.cmake
libffi/include/: ffi.h.in
lis-1.4.12/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  configure.in
lis-1.4.12/include/: Makefile.in  lis.h  lis_config.h.in  lis_config.h.in.cmake  lis_config_win.h  lis_esolver.h  lis_fortran.h  lis_io.h  lis_matrix.h  lis_matvec.h  lis_mpi.h  lis_precision.h  lis_precon.h  lis_solver.h  lis_system.h  lis_vector.h  lisf.h.in  lislib.h
lis-1.4.12/src/: CMakeLists.txt  Makefile.am  Makefile.in
lis-1.4.12/test/: Makefile.am  Makefile.in  etest1.c  etest1f.F  etest2.c  etest3.c  etest4.c  etest4f.F  etest5.c  etest6.c  spmvtest1.c  spmvtest2.c  spmvtest3.c  spmvtest4.c  spmvtest5.c  test.sh  test1.c  test1f.F  test2.c  test3.c  test4.c  test4f.F  test5.c  test6.c
lis-1.4.12/win/: Makefile.in  configure.bat
metis-5.1.0/libmetis/: CMakeLists.txt
moo-0.1.0/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
moo-0.1.0/data/: radauConstantsB.data  radauConstantsC.data  radauConstantsC0.data  radauConstantsW.data  radauConstantsW0.data
moo-0.1.0/scripts/: ConstructRadauIIA.py  lagrange_interpolation.py  test_hessian.py
moo-0.1.0/test/: CMakeLists.txt
primme-3.2.3/: CMakeLists.txt
primme-3.2.3/cmake/: PrimmeTests.cmake
primme-3.2.3/doc/: make.bat
primme-3.2.3/include/: CMakeLists.txt
primme-3.2.3/src/: CMakeLists.txt
zlib/: CMakeLists.txt
(+1468 files in other folders)
